Incorrect command line crash vlc
This command line is incorrect but vlc will crash..
vlc "C:\test.ts" --sout '#:duplicate{dst=rtp{dst=0,port=7979,sdp="rtsp://localhost:404/test.sdp"}}'
[0x319fb9c] main access out error: cannot resolve [stream-0-a52 .]:1234 : Host or service not found
[0x319fb9c] access_output_udp access out error: failed to create raw UDP socket
[0x319fb9c] access_output_rtmp access out warning: invalid path
[0x319fb9c] access_output_file access out debug: file access output opened (stream-0-a52 .)
[0x319fb9c] main access out debug: using sout access module "access_output_file"
[0x319fb9c] main access out debug: TIMER module_need() : 2282.000 ms - Total 2282.000 ms / 1 intvls (Avg 2282.000 ms)
[0x24e6524] main mux debug: looking for sout mux module: 10 candidates
[0x24e6524] mux_ts mux debug: shaping=200000 pcr=70000 dts_delay=400000
[0x24e6524] main mux debug: using sout mux module "mux_ts"
[0x24e6524] main mux debug: TIMER module_need() : 16.000 ms - Total 16.000 ms / 1 intvls (Avg 16.000 ms)
[0x31a2d74] main stream output debug: muxer support adding stream at any time
[0x31a2d74] main stream output debug: muxer prefers to wait for all ES before starting to mux
[0x24e6524] main mux debug: adding a new input
[0x24e6524] mux_ts mux debug: adding input codec=a52 pid=68
[0x24e6524] mux_ts mux debug: new PCR PID is 68
[0x501ff4c] main access out error: cannot resolve [stream-0-a52 .]:1234 : Host or service not found
[0x501ff4c] access_output_udp access out error: failed to create raw UDP socket
[0x501ff4c] access_output_rtmp access out warning: invalid path
Program received signal SIGTRAP, Trace/breakpoint trap.
[Switching to thread 4532.0x157c]
0x77cc0005 in ntdll!RtlCopyOutOfProcessMemoryStreamTo ()
from C:\Windows\system32\ntdll.dll
(gdb) Error: dll starting at 0x779e0000 not found.
Error: dll starting at 0x774e0000 not found.
Error: dll starting at 0x779e0000 not found.
Error: dll starting at 0x77910000 not found.
warning: HEAP[vlc.exe]:
warning: HEAP: Free Heap block 62d4d70 modified at 62d4e08 after it was freed