Do not crash if sout access is not specified - fixes #2665

Should we print an error and fail?